--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Now Playing vKurama7u7v</title>
 </head>
+
 <body>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3y6jjMewDLPFbNrCrvYChO?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe style="border-radius:12px; max-width: 380px;"
+        src="https://open.spotify.com/embed/playlist/3y6jjMewDLPFbNrCrvYChO?utm_source=generator" width="100%"
+        height="352" frameBorder="0" allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </body>
+
 </html>
