--- a/index.html
+++ b/index.html
@@ -5,13 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Now Playing vKurama7u7v</title>
+
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background: #121212;
+            padding: 1em;
+        }
+
+        iframe {
+            height: calc(100vh - 2.5em);
+        }
+    </style>
 </head>
 
 <body>
-    <iframe style="border-radius:12px; max-width: 400px;"
-        src="https://open.spotify.com/embed/playlist/3y6jjMewDLPFbNrCrvYChO?utm_source=generator" width="100%"
+    <iframe style="border-radius:12px"
+        src="https://open.spotify.com/embed/playlist/3y6jjMewDLPFbNrCrvYChO?utm_source=generator&theme=0" width="100%"
         height="352" frameBorder="0" allowfullscreen=""
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
 </body>
 
 </html>
